--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 			<div id="hideout-network"></div>
 		</div>
 		<div class="rightMenu">
-			<span id="infoBoxTitle">укрытие диаграмма</span>
+			<span id="infoBoxTitle">Диаграмма убежища</span>
 			<div class="rightMenuContent" id="infoBoxContent">
-				<h3>диаграмма интерактивный, попробуйте!</h3>
+				<h3>Диаграмма интерактивна, попробуйте!</h3>
 			</div>
 		</div>
 	</div>
