--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
 		<a href="https://www.reddit.com/user/lapqa/">u/lapqa</a>
 	</div>
 
+	<div class="footer">
+		<h1>About | Escape From Tarkov Hideout Guide</h1>
+		<p>
+			<strong>Escape From Tarkov's</strong> "Hideout" feature lets players spend resources, like items found in a raid or 
+			money, in order to upgrade stations. Stations like the medbay, workshop, and nutrition unit all allow 
+			players a chance to craft items. Other stations, like the booze generator or scav case, reward PMCs with 
+			items over time.
+		</p>
+		<p>
+			This guide can help you understand what the costs are for each station & which prerequisites are needed. 
+			Try interacting with and exploring the graph to optimize your upgrades!
+		</p>
+	</div>
+
 	<script src="vis-network.min.js"></script>
 	<script src="loc/en-US.js"></script>
 	<script src="loc/ru-RU.js"></script>
