trying to set a font-size for mobile or desktop and use em for relative sizing

--- a/index.html
+++ b/index.html
@@ -77,17 +77,8 @@
 		</div>
 	</div>
 
-	<div class="made">
-		Made with
-		<img width="14" alt="A perfect SVG heart"
-			src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/A_perfect_SVG_heart.svg/16px-A_perfect_SVG_heart.svg.png" />
-		for EFT community by
-		<a href="https://www.reddit.com/user/xenocidebrm/">u/xenocidebrm</a> and
-		<a href="https://www.reddit.com/user/lapqa/">u/lapqa</a>
-	</div>
-
 	<div class="footer">
-		<h1>About | Escape From Tarkov Hideout Guide</h1>
+		<h1>About — Escape From Tarkov Hideout Guide</h1>
 		<p>
 			<strong>Escape From Tarkov's</strong> "Hideout" feature lets players spend resources, like items found in a raid or 
 			money, in order to upgrade stations. Stations like the medbay, workshop, and nutrition unit all allow 
@@ -98,6 +89,15 @@
 			This guide can help you understand what the costs are for each station & which prerequisites are needed. 
 			Try interacting with and exploring the graph to optimize your upgrades!
 		</p>
+	</div>
+
+	<div class="made">
+		Made with
+		<img width="14" alt="A perfect SVG heart"
+			src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/A_perfect_SVG_heart.svg/16px-A_perfect_SVG_heart.svg.png" />
+		for EFT community by
+		<a href="https://www.reddit.com/user/xenocidebrm/">u/xenocidebrm</a> and
+		<a href="https://www.reddit.com/user/lapqa/">u/lapqa</a>
 	</div>
 
 	<script src="vis-network.min.js"></script>
