whoops on the favicon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<!-- /GTM -->
 	<!-- Google auto-ads -->
 	<script data-ad-client="ca-pub-3528448594888707" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<link rel="shortcut icon" href="https://www.eft-graph.com.com/favicon.ico" />
+	<link rel="shortcut icon" href="https://www.eft-graph.com/favicon.ico" />
 </head>
 
 <body>
