--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 				<td class="menu">
 					<a href="index.html" class="menuLink">Hideout graph</a>
 					<a href="#" class="menuLink disabled">Quest items</a>
+					<a href="about.html" class="menuLink">Learn more</a>
 				</td>
 			</tr>
 		</table>
@@ -83,7 +84,7 @@
 			<strong>Escape From Tarkov's</strong> "Hideout" feature lets players spend resources, like items found in a raid or 
 			money, in order to upgrade stations. Stations like the medbay, workshop, and nutrition unit all allow 
 			players a chance to craft items. Other stations, like the booze generator or scav case, reward PMCs with 
-			items over time.
+			items over time. See more information on our <a href="about.html">about page</a>.
 		</p>
 		<p>
 			This guide can help you understand what the costs are for each station & which prerequisites are needed. 
