--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
+	<meta name="monetization" content="$ilp.uphold.com/JfUGJEHb7KEm">
 	<meta name="description"
 		content="Wondering how to upgrade the hideout in Escape From Tarkov? The game is hard enough already - so I simplified it." />
 	<meta name="keywords" content="escapefromtarkov,hideout,upgrades" />
