--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 					<a href="index.html" class="menuLink">Hideout graph</a>
 					<a href="#" class="menuLink disabled">Quest items</a>
 					<a href="about.html" class="menuLink">Learn more</a>
+					<a href="https://www.buymeacoffee.com/bradio" class="menuLink">Buy me a coffee</a>
 				</td>
 			</tr>
 		</table>
@@ -98,7 +99,7 @@
 		<img width="14" alt="A perfect SVG heart"
 			src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/A_perfect_SVG_heart.svg/16px-A_perfect_SVG_heart.svg.png" />
 		for EFT community by
-		<a href="https://www.reddit.com/user/xenocidebrm/">u/xenocidebrm</a> and
+		<a href="https://twitter.com/brad_io">@brad_io</a> and
 		<a href="https://www.reddit.com/user/lapqa/">u/lapqa</a>
 	</div>
 
