--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		content="Wondering how to upgrade the hideout in Escape From Tarkov? The game is hard enough already - so I simplified it." />
 	<meta name="keywords" content="escapefromtarkov,hideout,upgrades" />
 	<meta name="author" content="/u/xenocidebrm" />
+	<meta name=”viewport” content=”width=device-width, initial-scale=1″>
 	<title>Escape From Tarkov Hideout Guide | eft-graph.com</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<!-- Google Tag Manager -->
