--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<meta name="keywords" content="escapefromtarkov,hideout,upgrades" />
 	<meta name="author" content="/u/xenocidebrm" />
 	<meta name=”viewport” content=”width=device-width, initial-scale=1″>
-	<title>Escape From Tarkov Hideout Guide | eft-graph.com</title>
+	<meta name="revision" content="2020-01-12" />
+	<title>Escape From Tarkov Hideout Guide | Last Updated: 2020-01-12 | eft-graph.com</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<!-- Google Tag Manager -->
 	<script>
@@ -84,6 +85,10 @@
 	<div class="footer">
 		<h1>About — Escape From Tarkov Hideout Guide</h1>
 		<p>
+			Around January 12th, 2021, the <a href="https://escapefromtarkov.gamepedia.com/Car_battery">car battery</a> was added as a requirement
+			to build the Generator. Unless drop rates are also modified, this significantly increases the cost of getting your hideout started.
+		</p>
+		<p>
 			<strong>Escape From Tarkov's</strong> "Hideout" feature lets players spend resources, like items found in a raid or 
 			money, in order to upgrade stations. Stations like the medbay, workshop, and nutrition unit all allow 
 			players a chance to craft items. Other stations, like the booze generator or scav case, reward PMCs with 
@@ -101,7 +106,7 @@
 			src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/A_perfect_SVG_heart.svg/16px-A_perfect_SVG_heart.svg.png" />
 		for EFT community by
 		<a href="https://twitter.com/brad_io">@brad_io</a> and
-		<a href="https://www.reddit.com/user/lapqa/">u/lapqa</a>
+		<a href="https://www.reddit.com/user/lapqa/">u/lapqa</a>. Last updated: 2020-01-12.
 	</div>
 
 	<script src="vis-network.min.js"></script>
