--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="monetization" content="$ilp.uphold.com/JfUGJEHb7KEm">
 	<meta name="description"
 		content="Wondering how to upgrade the hideout in Escape From Tarkov? The game is hard enough already - so I simplified it." />
-	<meta name="keywords" content="escapefromtarkov,hideout,upgrades" />
+	<meta name="keywords" content="escapefromtarkov,hideout,upgrades,guide" />
 	<meta name="author" content="/u/xenocidebrm" />
 	<meta name=”viewport” content=”width=device-width, initial-scale=1″>
 	<meta name="revision" content="2020-01-12" />
@@ -47,9 +47,8 @@
 				<td class="logotype"><a href="index.html"></a></td>
 				<td class="menu">
 					<a href="index.html" class="menuLink">Hideout graph</a>
-					<a href="#" class="menuLink disabled">Quest items</a>
+					<a href="#whats-new" class="menuLink">What's new?</a>
 					<a href="about.html" class="menuLink">Learn more</a>
-					<a href="https://www.buymeacoffee.com/bradio" class="menuLink">Buy me a coffee</a>
 				</td>
 			</tr>
 		</table>
@@ -83,11 +82,31 @@
 	</div>
 
 	<div class="footer">
-		<h1>About — Escape From Tarkov Hideout Guide</h1>
+		<h1>Escape From Tarkov Hideout Guide</h1>
+		<h2>What's new?</h2>
 		<p>
-			Around January 12th, 2021, the <a href="https://escapefromtarkov.gamepedia.com/Car_battery">car battery</a> was added as a requirement
-			to build the Generator. Unless drop rates are also modified, this significantly increases the cost of getting your hideout started.
+			Since the 2021 wipe, Battlestate Games has been silently tweaking and changing Hideout requirements, dealer barter trades,
+			and presumably drop rates. All the information on this site is as up-to-date as I could find. Below, I have a list of changes
+			that were made:
 		</p>
+		<ul>
+			<li>
+				Added <a href="https://escapefromtarkov.gamepedia.com/Car_battery">car battery</a> as a requirement to build the 
+				tier 1 Generator. While not strictly a requirement for much (only the Nutrition Unit requires it to be built), the 
+				Generator <i>is</i> required to do a lot of the <a href="https://escapefromtarkov.gamepedia.com/Crafting">crafting</a>
+				newer players need, including most Medstation crafts.
+			</li>
+			<li>
+				Rest Space tier 2 now requires additional Energy-saving lamps, a DVD drive, and a magnet. The ruble cost and reputation 
+				requirements are unchanged.
+			</li>
+		</ul>
+		<p>
+			Did I miss anything? Send me a DM <a href="https://www.reddit.com/message/compose/?to=xenocidebrm">on Reddit</a> or 
+			<a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Feft-graph.com&text=yo%20@brad_io%2C%20you%27re%20missing%20something%3A%20&hashtags=eftgraph">Tweet</a> at me.
+		</p>
+		
+		<h2>About</h2>
 		<p>
 			<strong>Escape From Tarkov's</strong> "Hideout" feature lets players spend resources, like items found in a raid or 
 			money, in order to upgrade stations. Stations like the medbay, workshop, and nutrition unit all allow 
