--- a/about.html
+++ b/about.html
@@ -44,8 +44,8 @@
 				<td class="logotype"><a href="index.html"></a></td>
 				<td class="menu">
 					<a href="index.html" class="menuLink">Hideout graph</a>
-                    <a href="#" class="menuLink disabled">Quest items</a>
-                    <a href="about.html" class="menuLink">Learn more</a>
+					<a href="index.html#whats-new" class="menuLink">What's new?</a>
+                    			<a href="about.html" class="menuLink">Learn more</a>
 				</td>
 			</tr>
 		</table>
