--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 	<div class="footer">
 		<h1>Escape From Tarkov Hideout Guide</h1>
-		<h2>What's new?</h2>
+		<h2 id="whats-new">What's new?</h2>
 		<p>
 			Since the 2021 wipe, Battlestate Games has been silently tweaking and changing Hideout requirements, dealer barter trades,
 			and presumably drop rates. All the information on this site is as up-to-date as I could find. Below, I have a list of changes
