--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
 			</li>
 		</ul>
 		<p>
-			Did I miss anything? Send me a DM <a href="https://www.reddit.com/message/compose/?to=xenocidebrm">on Reddit</a> or 
-			<a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Feft-graph.com&text=yo%20@brad_io%2C%20you%27re%20missing%20something%3A%20&hashtags=eftgraph">Tweet</a> at me.
+			Did I miss anything? Send me a DM <a href="https://www.reddit.com/message/compose/?to=xenocidebrm" target="_blank">on Reddit</a> or 
+			<a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Feft-graph.com&text=yo%20@brad_io%2C%20you%27re%20missing%20something%3A%20&hashtags=eftgraph" target="_blank">
+				Tweet</a> at me.
 		</p>
 		
 		<h2>About</h2>
