--- a/about.html
+++ b/about.html
@@ -99,6 +99,21 @@
             is used to power the <a href="https://escapefromtarkov.gamepedia.com/Hideout#Bitcoin_Farm">Bitcoin farm</a>, which makes money over time. 
             As patches come out and changes are made to the hideout, it's worth considering how that will affect item prices on the black market.
         </p>
+		
+	<h1>What Should I Build?</h1?
+	<p>
+		There are lots of great guides out there that go way, way more in-depth than I could here. Personally, I focused on getting my Medstation and Workbench 
+		up to tier 2 as soon as possible, then took a break. Other improvements, like Stash 2, Intel Center, and Bitcoin Farm are a lot more expensive and 
+		difficult to build. Once I have Medstation 2, I can reliably craft myself lots of <a href="https://escapefromtarkov.gamepedia.com/IFAK_personal_tactical_first_aid_kit" target="_blank">IFAK
+		</a> kits, which I can either use or sell on the market. You can also use Workbench 2 to breakdown Power Cords into Wires, which generally sell for a little 
+		more than the Power Cords would together.
+	</p>
+	<p>
+		In short, build whatever you're comfortable with. The biggest thing that allowed me to go past Medstation/Lavatory/Workbench into the higher tiers was 
+		a <a href="https://escapefromtarkov.gamepedia.com/Lucky_Scav_Junkbox" target="_blank">Lucky Scav Junkbox</a>, which let me store materials without eating up 
+		too much Stash space. Whatever you do, good luck! Let me know if this guide helped you out, or if you have any suggestions. You can find me on 
+		<a href="https://twitter.com/brad_io" target="_blank">Twitter</a> or <a href="https://www.reddit.com/user/xenocidebrm/">Reddit</a>.
+	</p>
 
 	</div>
 
