--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 		</p>
 		<ul>
 			<li>
-				Added <a href="https://escapefromtarkov.gamepedia.com/Car_battery">car battery</a> as a requirement to build the 
+				<strong>[Generator 1]</strong> Added <a href="https://escapefromtarkov.gamepedia.com/Car_battery">car battery</a> as a requirement to build the 
 				tier 1 Generator. While not strictly a requirement for much (only the Nutrition Unit requires it to be built), the 
 				Generator <i>is</i> required to do a lot of the <a href="https://escapefromtarkov.gamepedia.com/Crafting">crafting</a>
 				newer players need, including most Medstation crafts.
 			</li>
 			<li>
-				Rest Space tier 2 now requires additional Energy-saving lamps, a DVD drive, and a magnet. The ruble cost and reputation 
+				<strong>[Rest Space 2]</strong> The 2nd tier now requires additional Energy-saving lamps, a DVD drive, and a magnet. The ruble cost and reputation 
 				requirements are unchanged.
 			</li>
 		</ul>
