--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
             As patches come out and changes are made to the hideout, it's worth considering how that will affect item prices on the black market.
         </p>
 		
-	<h1>What Should I Build?</h1?
+		<h1>What Should I Build?</h1>
 	<p>
 		There are lots of great guides out there that go way, way more in-depth than I could here. Personally, I focused on getting my Medstation and Workbench 
 		up to tier 2 as soon as possible, then took a break. Other improvements, like Stash 2, Intel Center, and Bitcoin Farm are a lot more expensive and 
