--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
 				<strong>[Rest Space 2]</strong> The 2nd tier now requires additional Energy-saving lamps, a DVD drive, and a magnet. The ruble cost and reputation 
 				requirements are unchanged.
 			</li>
+			<li>
+				<strong>[Nutrition Unit 3]</strong> Now requires 2 "Chimney" <a href="https://escapefromtarkov.gamepedia.com/Smoked_Chimney_drain_cleaner">cleaner</a>. 
+				On a side note, I don't think I've ever seen one of these yet this wipe...
+			<li/>
 		</ul>
 		<p>
 			Did I miss anything? Send me a DM <a href="https://www.reddit.com/message/compose/?to=xenocidebrm" target="_blank">on Reddit</a> or 
