--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 		</p>
 		<ul>
 			<li>
-				<strong>[Generator 1]</strong> Added <a href="https://escapefromtarkov.gamepedia.com/Car_battery">car battery</a> as a requirement to build the 
+				<del><strong>[Generator 1]</strong> Added <a href="https://escapefromtarkov.gamepedia.com/Car_battery">car battery</a> as a requirement to build the 
 				tier 1 Generator. While not strictly a requirement for much (only the Nutrition Unit requires it to be built), the 
 				Generator <i>is</i> required to do a lot of the <a href="https://escapefromtarkov.gamepedia.com/Crafting">crafting</a>
-				newer players need, including most Medstation crafts.
+					newer players need, including most Medstation crafts.</del> This requirement has been changed as of 2021-01-13.
 			</li>
 			<li>
 				<strong>[Rest Space 2]</strong> The 2nd tier now requires additional Energy-saving lamps, a DVD drive, and a magnet. The ruble cost and reputation 
@@ -103,6 +103,10 @@
 			<li>
 				<strong>[Nutrition Unit 3]</strong> Now requires 2 "Chimney" <a href="https://escapefromtarkov.gamepedia.com/Smoked_Chimney_drain_cleaner">cleaner</a>. 
 				On a side note, I don't think I've ever seen one of these yet this wipe...
+			</li>
+			<li>
+				<strong>[Generator 1]</strong> (Updated 2021-01-13) Now requires a <a href="https://escapefromtarkov.gamepedia.com/Spark_plug">spark plug</a>, 
+				not a car battery.
 			</li>
 		</ul>
 		<p>
