--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 				<strong>[Generator 1]</strong> (Updated 2021-01-13) Now requires a <a href="https://escapefromtarkov.gamepedia.com/Spark_plug">spark plug</a>, 
 				not a car battery.
 			</li>
+			<li>
+				<strong>[Water Collector 2] / [Lavatory 2]</strong> Both now require <a href="https://escapefromtarkov.gamepedia.com/KEKTAPE_duct_tape">Kek tape</a>. 
+			</li>
 		</ul>
 		<p>
 			Did I miss anything? Send me a DM <a href="https://www.reddit.com/message/compose/?to=xenocidebrm" target="_blank">on Reddit</a> or 
