--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
 			<li>
 				<strong>[Water Collector 2] / [Lavatory 2]</strong> Both now require <a href="https://escapefromtarkov.gamepedia.com/KEKTAPE_duct_tape">Kek tape</a>. 
 			</li>
+			<li><strong>[Lavatory 1]</strong> Now requires 1 toilet paper.</li>
+			<li><strong>[Heating 2]</strong> Now requires 3 dry fuel, 2 hunter matches, and Vents 2.</li>
+			<li><strong>[Vents 2]</strong> Now requires 3 CPU fans.</li>
 		</ul>
 		<p>
 			Did I miss anything? Send me a DM <a href="https://www.reddit.com/message/compose/?to=xenocidebrm" target="_blank">on Reddit</a> or 
