--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 		<img width="14" alt="A perfect SVG heart"
 			src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/A_perfect_SVG_heart.svg/16px-A_perfect_SVG_heart.svg.png" />
 		for EFT community by
-		<a href="https://twitter.com/brad_io">@brad_io</a> and
+		<a href="https://twitter.com/brad_io">@brad_io</a> with design work by 
 		<a href="https://www.reddit.com/user/lapqa/">u/lapqa</a>. Last updated: 2021-01-13.
 	</div>
 
