--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 		<img width="14" alt="A perfect SVG heart"
 			src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/A_perfect_SVG_heart.svg/16px-A_perfect_SVG_heart.svg.png" />
 		for EFT community by
-		<a href="https://www.reddit.com/user/xenocidebrm/">u/xenocidebrm</a> and
+		<a href="https://www.reddit.com/user/xenocidebrm/">u/xenocidebrm</a> with design work by 
 		<a href="https://www.reddit.com/user/lapqa/">u/lapqa</a>
 	</div>
 
