--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@
 			<li><strong>[Lavatory 1]</strong> Now requires 1 toilet paper.</li>
 			<li><strong>[Heating 2]</strong> Now requires 3 dry fuel, 2 hunter matches, and Vents 2.</li>
 			<li><strong>[Vents 2]</strong> Now requires 3 CPU fans.</li>
+			<li>
+				<strong>[Solar Power]</strong> Now requires 10,000 additional Euros (up to 25,000), 4 more military cable and 4 more military power filter, and 2 
+				more phased array elements. This basically doubles the cost of the solar power station; it still performs the same function of reducing fuel usage by 50%.
+			</li>
+			<li><strong>[Air Filtering Unit]</strong> Now requires 2 "air filter for gas mask" and one military power filter. Other requirements remain the same.</li>
+			<li>
+				<strong>[Scav Case]</strong> Costs went way up - requires 2 additional bronze lions (for a total of 4), 4 additional gold skull rings (for a total of 6), 
+				2 more golden neck chains (for a total of 8) and 1 additional "Roler" gold wrist watch (for a total of 4).
+			</li>
+			<li><strong>[Library]</strong> Used to only require rubles, now also requires 2 chainlets and 1 horse figurine.</li>
 		</ul>
 		<p>
 			Did I miss anything? Send me a DM <a href="https://www.reddit.com/message/compose/?to=xenocidebrm" target="_blank">on Reddit</a> or 
