--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 				<td class="menu">
 					<a href="index.html" class="menuLink">Hideout graph</a>
 					<a href="#whats-new" class="menuLink">What's new?</a>
+					<a href="tiers.html" class="menuLink">Tier list</a>
 					<a href="about.html" class="menuLink">Learn more</a>
 				</td>
 			</tr>
