--- a/tiers.html
+++ b/tiers.html
@@ -61,7 +61,7 @@
 
 		<p>If you want to know what are the hideout stations you must upgrade, we'll start with the S-tier stations below. If you find this tier list helpful, it would really help me out if you could share it or give me feedback. You can find me on Twitter at <a href="https://twitter.com/brad_io">@brad_io</a>!</p>
 
-		<h2>S Tier</h2>
+		<h2>✨S Tier</h2>
 
 		<p>The stations in this category will make the game significantly easier to play. You should work towards them as soon as possible, as they'll make quests and raids much easier.</p>
 
@@ -71,13 +71,13 @@
 
 		<p>Rounding out our top tier upgrades is Stash level 2. Not much needs to be said about a larger stash (100 extra slots). Although the requirements aren't cheap, the additional room means more weapons, more scav loot, and more room to breath. With a cost of at least 3.5 million rubles, it's a lot to save up for, but worth it.</p>
 
-		<h2>A Tier</h2>
+		<h2>⭐A Tier</h2>
 
 		<p>The modules in this tier and below are things that you should build once you're already feeling stable and comfortable with the game. A common mistake is to hyper-target one of the modules here, with the aim of making free money, and missing out on other, more accessible ways of raking in the cash. For example, quests often open up cheaper gear purchases, lowering the risk of each raid.</p>
 
 		<p>One of the high-priority upgrades you should focus on in mid-to-late wipe is the Scav Case. The Scav Case allows you to ante up some rubles or items, and claim a reward a few hours later. Basically, it's gambling in Tarkov, and who doesn't love gambling? The Scav Case sits at the same Hideout level as the much-loved Bitcoin Farm, and both require significant investment. However, the Scav Case only requires about a ~3 million ruble investment initially, and doesn't have the constant upkeep of ensuring fuel is loaded in your generator. By contrast, for 3 million rubles you can only put 2-3 graphics cards in your Bitcoin Farm. You can go more in-depth with the return on investment from the Scav Case in other articles, but the TL;DR is that you can expect about a 30% ROI.</p>
 
-		<h2>B Tier</h2>
+		<h2>👍B Tier</h2>
 
 		<p>Modules in this tier are nice-to-haves - they'll still provide value, but in my opinion there are better choices to make when upgrading.</p>
 
@@ -93,7 +93,7 @@
 
 		<p>Other upgrades in this tier include Solar Power, Water Collector level 3, and the Booze Generator. Solar Power helps cut down on fuel costs, which is useful once you have a Bitcoin Farm up and running. The 3rd level of Water Collector can be used to produce Purified Water, which is essential in producing "Fierce Hatchling" moonshine. The moonshine is actually produced at the Booze Generator, which powers the best investment you can make at the Scav Case.</p>
 
-		<h2>F Tier</h2>
+		<h2>💩F Tier</h2>
 
 		<p>These are... bad. They're expensive, they provide underwhelming benefits, or they don't act as pre-requisites to anything else important.</p>
 
