--- a/tiers.html
+++ b/tiers.html
@@ -52,7 +52,7 @@
 		</table>
 	</header>
 
-	<div class="tier-list">
+	<div class="content-text">
         <h1>Tier List</h1>
 		
 		<h2>Introduction</h2>
