--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 		</table>
 	</header>
 
-	<div class="about-info">
+	<div class="content-text">
         <h1>Escape From Tarkov</h1>
         <p>
             From the official wiki, "Escape from Tarkov is a hardcore and realistic online first-person action RPG with MMO features." 
