--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta name="keywords" content="escapefromtarkov,hideout,upgrades,guide" />
 	<meta name="author" content="/u/xenocidebrm" />
 	<meta name=”viewport” content=”width=device-width, initial-scale=1″>
-	<meta name="revision" content="2021-01-13" />
-	<title>Escape From Tarkov Hideout Guide | Last Updated: 2021-01-13 | eft-graph.com</title>
+	<meta name="revision" content="2021-01-18" />
+	<title>Hideout Graph | Optimal Tarkov Hideout Build | EFT-Graph</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<!-- Google Tag Manager -->
 	<script>
