--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="monetization" content="$ilp.uphold.com/JfUGJEHb7KEm">
 	<meta name="description"
-		content="Wondering how to upgrade the hideout in Escape From Tarkov? The game is hard enough already - so I simplified it." />
+		content="Last updated: 2021-01-18. Learn the optimal path for upgrading your hideout in Escape From Tarkov." />
 	<meta name="keywords" content="escapefromtarkov,hideout,upgrades,guide" />
 	<meta name="author" content="/u/xenocidebrm" />
 	<meta name=”viewport” content=”width=device-width, initial-scale=1″>
