--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
             After a long period of war, you play as either Russian or European special forces trying to escape from the near-apocalyptic environment.
         </p>
 
-        <h1>The Hideout</h1>
+        <h1>Tarkov Hideout Guide</h1>
         <h2>Overview</h2>
         <p>
             The Hideout is a feature first launched in late 2019. While it's listed as a "location", and you can technically walk around 
