--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 			<div class="rightMenuContent" id="infoBoxContent">
 				<h3>Диаграмма интерактивна, попробуйте!</h3>
 			</div>
+			<div id="cumulativeCostContent">
+
+			</div>
 		</div>
 	</div>
 
