working mark-as-completed and total cost! no local storage yet tho

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<div class="rightMenuContent" id="infoBoxContent">
 				<h3>Диаграмма интерактивна, попробуйте!</h3>
 			</div>
-			<div id="cumulativeCostContent">
+			<div id="totalCostWrapper">
 
 			</div>
 		</div>
