--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 </head>
 
 <body>
+	<div class="alert">
+		<span class="closebtn" onclick="this.parentElement.style.display='none';">✖</span>
+		✨ New features ✨ You can now view total cost of a module, mark them as "completed", and save your progress!
+	</div> 
 	<header>
 		<table>
 			<tr>
