--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<div class="alert">
 		<span class="closebtn" onclick="this.parentElement.style.display='none';">✖</span>
-		✨ New features ✨ You can now view total cost of a module, mark them as "completed", and save your progress!
+		✨ New features ✨ You can now view total cost of a module, mark them as "completed", and save your progress. Try playing with the graph!
 	</div> 
 	<header>
 		<table>
