--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 				2 more golden neck chains (for a total of 8) and 1 additional "Roler" gold wrist watch (for a total of 4).
 			</li>
 			<li><strong>[Library]</strong> Used to only require rubles, now also requires 2 chainlets and 1 horse figurine.</li>
+			<li><strong>[Stash 4]</strong> No longer requires Intel Center 3.</li>
 		</ul>
 		<p>
 			Did I miss anything? Send me a DM <a href="https://www.reddit.com/message/compose/?to=xenocidebrm" target="_blank">on Reddit</a> or 
