--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="/u/xenocidebrm" />
 	<meta name=”viewport” content=”width=device-width, initial-scale=1″>
 	<meta name="revision" content="2021-01-18" />
-	<title>Hideout Graph | Optimal Tarkov Hideout Build | EFT-Graph</title>
+	<title>Hideout Graph | Optimal Tarkov Hideout Build</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="https://www.eft-graph.com/favicon.ico" />
 </head>
@@ -111,14 +111,15 @@
 		
 		<h2>About</h2>
 		<p>
-			<strong>Escape From Tarkov's</strong> "Hideout" feature lets players spend resources, like items found in a raid or 
+			<strong>EFT's</strong> Hideout feature lets players spend resources, like items found in a raid or 
 			money, in order to upgrade stations. Stations like the medbay, workshop, and nutrition unit all allow 
 			players a chance to craft items. Other stations, like the booze generator or scav case, reward PMCs with 
 			items over time. See more information on our <a href="about.html">about page</a>.
 		</p>
 		<p>
 			This guide can help you understand what the costs are for each station & which prerequisites are needed. 
-			Try interacting with and exploring the graph to optimize your upgrades!
+			Try interacting with and exploring the graph to optimize your upgrades! Track your EFT Hideout build path with
+			this Tarkov Hideout guide.
 		</p>
 	</div>
 
