--- a/index.html
+++ b/index.html
@@ -43,10 +43,6 @@
 </head>
 
 <body>
-	<div class="alert">
-		<span class="closebtn" onclick="this.parentElement.style.display='none';">✖</span>
-		✨ New features ✨ You can now view total cost of a module, mark them as "completed", and save your progress. Try playing with the graph!
-	</div> 
 	<header>
 		<table>
 			<tr>
@@ -160,7 +156,7 @@
 	</div>
 
 	<script src="vis-network.min.js"></script>
-	<script src="loc/en-US.js"></script>
+	<script src="loc/en-US-bundled.js"></script>
 	<script src="loc/ru-RU.js"></script>
 	<script src="hideout-vis.js"></script>
 	<link rel="stylesheet" href="vis-network.min.css" />
