Trying to fix browserify 2

--- a/index.html
+++ b/index.html
@@ -156,9 +156,8 @@
 	</div>
 
 	<script src="vis-network.min.js"></script>
-	<script src="loc/en-US-bundled.js"></script>
 	<script src="loc/ru-RU.js"></script>
-	<script src="hideout-vis.js"></script>
+	<script src="hideout-vis-bundled.js"></script>
 	<link rel="stylesheet" href="vis-network.min.css" />
 	<!-- Please excuse the artisinal, hand-crafted icons. I don't have assets, so I had to take screenshots of my game. -->
 </body>
