HTML update with credit and last-updated

--- a/about.html
+++ b/about.html
@@ -94,16 +94,15 @@
 	</div>
 
 	<div class="made">
-		Made with
-		<img width="14" alt="A perfect SVG heart"
-			src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/A_perfect_SVG_heart.svg/16px-A_perfect_SVG_heart.svg.png" />
-		for EFT community by
-		<a href="https://www.reddit.com/user/xenocidebrm/">u/xenocidebrm</a> with design work by 
-		<a href="https://www.reddit.com/user/lapqa/">u/lapqa</a>
-	</div>
-
-	<script src="loc/en-US.js"></script>
-	<script src="loc/ru-RU.js"></script>
+        Made with
+        <img alt="A perfect SVG heart"
+             src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/A_perfect_SVG_heart.svg/16px-A_perfect_SVG_heart.svg.png"
+             width="14"/>
+        for EFT community by
+        <a href="https://www.reddit.com/user/xenocidebrm/">u/xenocidebrm</a> with design work by
+        <a href="https://www.reddit.com/user/lapqa/">u/lapqa</a> and data pipeline by
+        <a href="https://tarkov-tools.com/api/">tarkov-tools API</a>.
+    </div>
 </body>
 <!-- Google Tag Manager -->
 <script>
