--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta charset="utf-8" />
 	<meta name="monetization" content="$ilp.uphold.com/JfUGJEHb7KEm">
 	<meta name="description"
-		content="Last updated: 2021-01-18. Learn the optimal path for upgrading your hideout in Escape From Tarkov." />
+		  content="Last updated: 2022-01-20. Learn the optimal path for upgrading your hideout in Escape From Tarkov."/>
 	<meta name="keywords" content="escapefromtarkov,hideout,upgrades,guide" />
 	<meta name="author" content="@brad-io" />
 	<meta name=”viewport” content=”width=device-width, initial-scale=1″>
-	<meta name="revision" content="2021-01-18" />
+	<meta content="2022-01-20" name="revision"/>
 	<title>Hideout Graph | Optimal Tarkov Hideout Build</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="https://www.eft-graph.com/favicon.ico" />
@@ -144,10 +144,11 @@
 	<div class="made">
 		Made with
 		<img width="14" alt="A perfect SVG heart"
-			src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/A_perfect_SVG_heart.svg/16px-A_perfect_SVG_heart.svg.png" />
+			 src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/A_perfect_SVG_heart.svg/16px-A_perfect_SVG_heart.svg.png"/>
 		for EFT community by
-		<a href="https://twitter.com/brad_io">@brad_io</a> with design work by 
-		<a href="https://www.reddit.com/user/lapqa/">u/lapqa</a>. Last updated: 2021-01-13.
+		<a href="https://twitter.com/brad_io">@brad_io</a> with design work by
+		<a href="https://www.reddit.com/user/lapqa/">u/lapqa</a> and data pipeline by
+		<a href="https://tarkov-tools.com/api/">tarkov-tools API</a>. Last updated: 2022-01-20.
 	</div>
 
 	<script src="vis-network.min.js"></script>
