--- a/index.html
+++ b/index.html
@@ -86,52 +86,26 @@
 		<h1>Escape From Tarkov Hideout Guide</h1>
 		<h2 id="whats-new">What's new?</h2>
 		<p>
-			Since the 2021 wipe, Battlestate Games has been silently tweaking and changing Hideout requirements, dealer barter trades,
-			and presumably drop rates. All the information on this site is as up-to-date as I could find. Below, I have a list of changes
-			that were made:
+			This year, eft-graph has been updated! Now, we automatically stay up-to-date using the wonderful
+			tarkov-tools API. Instead of
+			me having to track and manually update all the module requirements, eft-graph will check reguarly and make
+			sure that you
+			have the latest information on Hideout module requirements. It's a brand-new wipe, so get out there and get
+			upgrading!
 		</p>
-		<ul>
-			<li>
-				<strong>[Rest Space 2]</strong> The 2nd tier now requires additional Energy-saving lamps, a DVD drive, and a magnet. The ruble cost and reputation 
-				requirements are unchanged.
-			</li>
-			<li>
-				<strong>[Nutrition Unit 3]</strong> Now requires 2 "Chimney" <a href="https://escapefromtarkov.gamepedia.com/Smoked_Chimney_drain_cleaner">cleaner</a>. 
-				On a side note, I don't think I've ever seen one of these yet this wipe...
-			</li>
-			<li>
-				<strong>[Generator 1]</strong> (Updated 2021-01-13) Now requires a <a href="https://escapefromtarkov.gamepedia.com/Spark_plug">spark plug</a>, 
-				not a car battery.
-			</li>
-			<li>
-				<strong>[Water Collector 2] / [Lavatory 2]</strong> Both now require <a href="https://escapefromtarkov.gamepedia.com/KEKTAPE_duct_tape">Kek tape</a>. 
-			</li>
-			<li><strong>[Lavatory 1]</strong> Now requires 1 toilet paper.</li>
-			<li><strong>[Heating 2]</strong> Now requires 3 dry fuel, 2 hunter matches, and Vents 2.</li>
-			<li><strong>[Vents 2]</strong> Now requires 3 CPU fans.</li>
-			<li>
-				<strong>[Solar Power]</strong> Now requires 10,000 additional Euros (up to 25,000), 4 more military cable and 4 more military power filter, and 2 
-				more phased array elements. This basically doubles the cost of the solar power station; it still performs the same function of reducing fuel usage by 50%.
-			</li>
-			<li><strong>[Air Filtering Unit]</strong> Now requires 2 "air filter for gas mask" and one military power filter. Other requirements remain the same.</li>
-			<li>
-				<strong>[Scav Case]</strong> Costs went way up - requires 2 additional bronze lions (for a total of 4), 4 additional gold skull rings (for a total of 6), 
-				2 more golden neck chains (for a total of 8) and 1 additional "Roler" gold wrist watch (for a total of 4).
-			</li>
-			<li><strong>[Library]</strong> Used to only require rubles, now also requires 2 chainlets and 1 horse figurine.</li>
-			<li><strong>[Stash 4]</strong> No longer requires Intel Center 3.</li>
-		</ul>
 		<p>
-			Did I miss anything? Send me a DM <a href="https://www.reddit.com/message/compose/?to=xenocidebrm" target="_blank">on Reddit</a> or 
-			<a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Feft-graph.com&text=yo%20@brad_io%2C%20you%27re%20missing%20something%3A%20&hashtags=eftgraph" target="_blank">
+			Comments, questions, complaints? Send me a DM <a
+				href="https://www.reddit.com/message/compose/?to=xenocidebrm" target="_blank">on Reddit</a> or
+			<a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Feft-graph.com&text=yo%20@brad_io%2C%20you%27re%20missing%20something%3A%20&hashtags=eftgraph"
+			   target="_blank">
 				Tweet</a> at me.
 		</p>
 		
 		<h2>About</h2>
 		<p>
-			<strong>EFT's</strong> Hideout feature lets players spend resources, like items found in a raid or 
-			money, in order to upgrade stations. Stations like the medbay, workshop, and nutrition unit all allow 
-			players a chance to craft items. Other stations, like the booze generator or scav case, reward PMCs with 
+			<strong>EFT's</strong> Hideout feature lets players spend resources, like items found in a raid or
+			money, in order to upgrade modules. Stations like the medbay, workshop, and nutrition unit all allow
+			players a chance to craft items. Other stations, like the booze generator or scav case, reward PMCs with
 			items over time. See more information on our <a href="about.html">about page</a>.
 		</p>
 		<p>
@@ -148,7 +122,8 @@
 		for EFT community by
 		<a href="https://twitter.com/brad_io">@brad_io</a> with design work by
 		<a href="https://www.reddit.com/user/lapqa/">u/lapqa</a> and data pipeline by
-		<a href="https://tarkov-tools.com/api/">tarkov-tools API</a>. Last updated: 2022-01-20.
+		<a href="https://tarkov-tools.com/api/">tarkov-tools API</a>.
+		Last updated: <span id="lastUpdatedDateFooter">2022-01-20</span>.
 	</div>
 
 	<script src="vis-network.min.js"></script>
